import string


class Location:
    name: string
    