from sandbox.location.location import Location


class Path:
    start: Location
    end: Location
    weight: int