@startuml location

package location {
    class Location {
        properties : Map<String, String>
    }

    class Path {
        weight: Number
        start: Location
        end: Location
    }

    class Map {
        +addPath(Path)
        +addLocation(Location)
        +getNextLocation(Location, Location) : Location
        +getLocations() : Location[]
    }

   

}

Path --> Location
Map o-- Location
Map o-- Path


@enduml